<resources>
    <string name="app_name">Barcode Manager</string>
    <string name="scan">Scan</string>
    <string name="hint_ed_result">Codigo de barras</string>
    <string name="barcode_manager">Barcode Manager</string>
    <string name="todo">todo</string>
    <string name="logearse_como_usuario">Logearse como usuario</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tv_texto">or</string>
    <string name="restablecer_password">Restablecer password</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="hint_nombre">Nombre</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_entrada">entrada</string>
    <string name="anular">Anular</string>
    <string name="registrar_salida">salida</string>
    <string name="nueva_operacion">Nueva Reserva</string>
    <string name="nombre_material">Nombre Material</string>
    <string name="fecha_entrada">Fecha Entrada</string>
    <string name="fecha_op">Fecha entrada o salida</string>
    <string name="fecha_salida">Fecha Salida</string>
    <string name="fechas_reserva">Seleccionar fechas reserva</string>
    <string name="fecha_prevista_entrada">Fecha prevista ntrada</string>
    <string name="fecha_prevista_salida">Fecha prevista salida</string>
    <string name="cargar_codigo">Cargar codigo</string>
    <string name="configuracion">Configuracion</string>
    <string name="aceptar">Aceptar</string>
    <string name="direccion_ip">Direccion IP</string>
    <string name="puerto">Puerto</string>
    <string name="mantener_sesion_iniciada">Mantener sesion iniciada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="scanner">Scanner</string>
    <string name="historial">Historial</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="tipo_de_operacion">Tipo de operacion</string>
    <string name="informacion_operacion">Informacion Operacion</string>
    <string name="historial_reservas">Historial Reservas</string>
    <string name="turn_on_flashlight">ON</string>
    <string name="turn_off_flashlight">OFF</string>
    <string name="nombre_proyecto">Nombre Proyecto</string>
    <string name="nombre_encargado">Seleccionar Encargado</string>
    <string name="modificar_operacion">Modificar Operacion</string>
    <string name="modificar">Modificar</string>
    <string name="mensaje">¿Eliminar esta reserva?</string>
    <string name="undo">Deshacer</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="datos_reserva">Datos Reserva</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="txt_alert_config">Los cambios de configuración se han guardado correctamente.</string>
    <string name="txt_reiniciar">¿Quiere reiniciar ahora?</string>
    <string name="txt_btn_reiniciar">REINICIAR</string>
    <string name="version">Barcode Manager v1.5</string>
    <string name="fecha_version_apk">Fecha: </string>
    <string name="txt_nuevo_escaneo">¿Desea escanear un nuevo producto?</string>
    <string name="escanear">Escanear</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="historial_proyectos">Historial Proyectos</string>
    <string name="new_notification">Actualización versión app</string>
    <string name="reintentar">Reintentar</string>
    <string name="fin">Fin de la carga</string>
    <string name="seleccionar_proyecto">Seleccionar Proyecto</string>
    <string name="texto_barcode_no_encontrado">Codigo no encontrado</string>
    <string name="lectura_cancelada">Lectura cancelada</string>
    <string name="txt_datos_no_encontrados">Upps, datos no encontrados!!</string>
    <string name="fechas_reservas">01/01/1901 – 01/01/1901</string>
    <string name="usuario_registrador">Usuario registrador</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="entrada_pendiente">PENDIENTE</string>
    <string name="salida_pendiente">PENDIENTE</string>
    <string name="_01_10_10_10">01/10 – 10/10</string>
    <string name="txt_salida">Salida:</string>
    <string name="txt_entrada">Entrada:</string>
    <string name="fechas_de_reserva">Fechas reserva</string>
    <string name="guionFechas">—</string>
    <string name="fechaSalidaFinal">01/10</string>
    <string name="fechaEntradaFinal">10/10</string>
    <string name="volver_a_registrar">Volver a registrar</string>
    <string name="manual_usuario">Manual Usuario</string>
    <string name="opciones">Opciones</string>
    <string name="web_descarga">Web Descarga</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal">Home</string>
    <string name="personalizacion">Personalizacion</string>
    <string name="cambiar_splash">Cambiar Splash</string>
    <string name="color_rojo">Color Rojo</string>
    <string name="color_azul">Color Azul</string>
    <string name="ondas_toolbar">Ondas</string>
    <string name="sin_ondas_toolbar">Sin Ondas</string>
    <string name="confirmar">CONFIRMAR</string>
</resources>