<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutUsers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary">

            <TextView
                android:id="@+id/tv_nom_producto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/barlow"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/nombre_producto"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_modificar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seleccionarFechasTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/barlow"
                android:text="@string/_01_10_10_10"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nom_producto" />

            <TextView
                android:id="@+id/tv_entrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/russo_one"
                android:text="@string/txt_entrada"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_fecha_entrada"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/seleccionarFechasTv"
                app:layout_constraintTop_toBottomOf="@+id/seleccionarFechasTv"
                app:layout_constraintVertical_bias="0.368" />

            <TextView
                android:id="@+id/tv_fecha_entrada"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/barlow"
                android:text="@string/entrada_pendiente"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_fecha_salida"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_fecha_salida" />

            <TextView
                android:id="@+id/tv_salida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow"
                android:text="@string/txt_salida"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/seleccionarFechasTv"
                app:layout_constraintTop_toBottomOf="@+id/seleccionarFechasTv"
                app:layout_constraintVertical_bias="0.388" />

            <TextView
                android:id="@+id/tv_fecha_salida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/barlow"
                android:text="@string/salida_pendiente"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_salida"
                app:layout_constraintTop_toBottomOf="@+id/seleccionarFechasTv"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/btn_modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/btn_eliminar"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/edit_button"
                app:tint="#FFFFFF"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/eliminar__1_"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>