<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ic_launcher_logo_background">

    <TextView
        android:id="@+id/tv_nuevo_escaneo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/barlow"
        android:text="@string/txt_nuevo_escaneo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_scanear"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:background="@drawable/round_background"
        android:fontFamily="@font/barlow"
        android:onClick="scannearDeNuevo"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:paddingEnd="15dp"
        android:paddingBottom="0dp"
        android:text="@string/escanear"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nuevo_escaneo"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_cancelar_escaneo"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:background="@drawable/round_background"
        android:fontFamily="@font/barlow"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:paddingEnd="15dp"
        android:paddingBottom="0dp"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nuevo_escaneo"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>