<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayoutScanner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FragmentScanner">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/waveTop4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="43dp"
            android:background="@drawable/wave__4_"
            android:rotationY="180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/top_view2"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:background="?attr/colorPrimaryVariant"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_background"
            android:fontFamily="@font/barlow"
            android:text="@string/scan"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <Button
            android:id="@+id/btn_cargar_codigo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_background"
            android:fontFamily="@font/barlow"
            android:text="@string/cargar_codigo"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/waveTop4">

            <EditText
                android:id="@+id/ed_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/barcode"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/barlow"
                android:hint="@string/hint_ed_result"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="?attr/colorOnSecondary"
                android:textSize="14sp"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btn_eliminarCodigo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:src="@drawable/eliminar"
                android:visibility="gone"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:fontFamily="@font/russo_one"
            android:text="@string/barcode_manager"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/top_view2"
            app:layout_constraintStart_toStartOf="@+id/top_view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>